compiler/src/test/resources/amyc/nameAnalyzer/passing/ParamAndLocal.amy
module ParamAndLocal
  fn foo(i: Int): Int = {
    val i: Int = i + 1;
    i
  }
end ParamAndLocal
