compiler/src/test/resources/amyc/nameAnalyzer/failing/UndefinedFunction.amy
module UndefinedFunction
  fn foo(): Int = { bar() }
end UndefinedFunction
